syntax = "proto3";

package beerservice.v1;

import "google/api/annotations.proto";

option java_multiple_files = true;
option java_outer_classname = "BeerServiceProto";
option java_package = "com.zrutfield.beer.v1";


service BeerService {
    rpc GetBeer(GetBeerRequest) returns (GetBeerResponse) {
        option (google.api.http) = {
            get: "/beers/{id}"
        };
    }

    rpc CreateBeer(CreateBeerRequest) returns (CreateBeerResponse) {
        option (google.api.http) = {
            post: "/beers"
            body: "beer"
        };
    }

    rpc UpdateBeer(UpdateBeerRequest) returns (UpdateBeerResponse) {
        option (google.api.http) = {
            put: "/beers"
            body: "beer"
        };
    }

    rpc DeleteBeer(DeleteBeerRequest) returns (DeleteBeerResponse) {
        option (google.api.http) = {
          delete: "/beers/{id}"
        };
    }
}

message GetBeerRequest {
    string id = 1;
}

message GetBeerResponse {
    Beer beer = 1;
}

message CreateBeerRequest {
    Beer beer = 1;
}

message CreateBeerResponse {
    Beer beer = 1;
}

message UpdateBeerRequest {
    Beer beer = 1;
}

message UpdateBeerResponse {
    Beer beer = 1;
}

message DeleteBeerRequest {
    string id = 1;
}

message DeleteBeerResponse {
    bool success = 1;
}

message Beer {
    string id = 1;
    string name = 2;
    string brand = 3;
    string type = 4;
}

